[gd_scene load_steps=4 format=2]

[ext_resource path="res://themes/main_menu.theme" type="Theme" id=1]
[ext_resource path="res://menus/mainMenu/mainMenu_buttons.gd" type="Script" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[node name="mainMenu_buttons" type="PanelContainer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -1020.0
margin_right = -76.0
margin_bottom = 880.0
size_flags_horizontal = 6
size_flags_vertical = 0
theme = ExtResource( 1 )
custom_styles/panel = SubResource( 3 )
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 944.0
margin_bottom = 880.0
__meta__ = {
"_edit_group_": true
}

[node name="spacer4" type="Control" parent="VBoxContainer"]
margin_right = 944.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 48 )
size_flags_vertical = 0

[node name="playButtonHBox" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 52.0
margin_right = 944.0
margin_bottom = 204.0

[node name="hspacer1" type="Control" parent="VBoxContainer/playButtonHBox"]
margin_right = 268.0
margin_bottom = 152.0
size_flags_horizontal = 7
size_flags_stretch_ratio = 2.0

[node name="playButton" type="Button" parent="VBoxContainer/playButtonHBox"]
margin_left = 272.0
margin_right = 944.0
margin_bottom = 152.0
rect_min_size = Vector2( 0, 120 )
size_flags_horizontal = 7
size_flags_vertical = 6
size_flags_stretch_ratio = 5.0
text = "Play"

[node name="spacer1" type="Control" parent="VBoxContainer"]
margin_top = 208.0
margin_right = 944.0
margin_bottom = 256.0
rect_min_size = Vector2( 0, 48 )
size_flags_vertical = 0

[node name="settingsButtonHBox" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 260.0
margin_right = 944.0
margin_bottom = 412.0

[node name="hspacer2" type="Control" parent="VBoxContainer/settingsButtonHBox"]
margin_right = 268.0
margin_bottom = 152.0
size_flags_horizontal = 7
size_flags_stretch_ratio = 2.0

[node name="settingsButton" type="Button" parent="VBoxContainer/settingsButtonHBox"]
margin_left = 272.0
margin_right = 944.0
margin_bottom = 152.0
rect_min_size = Vector2( 560, 120 )
size_flags_horizontal = 7
size_flags_vertical = 6
size_flags_stretch_ratio = 5.0
text = "Settings"

[node name="spacer2" type="Control" parent="VBoxContainer"]
margin_left = 472.0
margin_top = 416.0
margin_right = 472.0
margin_bottom = 464.0
rect_min_size = Vector2( 0, 48 )
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="creditsButtonHBox" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 468.0
margin_right = 944.0
margin_bottom = 620.0

[node name="hspacer3" type="Control" parent="VBoxContainer/creditsButtonHBox"]
margin_right = 268.0
margin_bottom = 152.0
size_flags_horizontal = 7
size_flags_stretch_ratio = 2.0

[node name="creditsButton" type="Button" parent="VBoxContainer/creditsButtonHBox"]
margin_left = 272.0
margin_right = 944.0
margin_bottom = 152.0
rect_min_size = Vector2( 0, 120 )
size_flags_horizontal = 7
size_flags_vertical = 6
size_flags_stretch_ratio = 5.0
text = "Credits"

[node name="spacer3" type="Control" parent="VBoxContainer"]
margin_top = 624.0
margin_right = 944.0
margin_bottom = 672.0
rect_min_size = Vector2( 0, 48 )
size_flags_vertical = 4

[node name="exitButtonHBox" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 676.0
margin_right = 944.0
margin_bottom = 828.0

[node name="hspacer4" type="Control" parent="VBoxContainer/exitButtonHBox"]
margin_right = 268.0
margin_bottom = 152.0
size_flags_horizontal = 7
size_flags_stretch_ratio = 2.0

[node name="exitButton" type="Button" parent="VBoxContainer/exitButtonHBox"]
margin_left = 272.0
margin_right = 944.0
margin_bottom = 152.0
rect_min_size = Vector2( 0, 120 )
size_flags_horizontal = 3
size_flags_vertical = 6
size_flags_stretch_ratio = 5.0
text = "Exit"

[node name="spacer5" type="Control" parent="VBoxContainer"]
margin_top = 832.0
margin_right = 944.0
margin_bottom = 880.0
rect_min_size = Vector2( 0, 48 )
size_flags_vertical = 0
